Incorporated Jorge's and Sean's comments

--- a/Manuscript.Rmd
+++ b/Manuscript.Rmd
@@ -47,7 +47,7 @@ Email: jvillasenor@bren.ucsb.edu (JCVD) \
 
 **Abstract**
 
-Marine reserves are often implemented to preserve habitat, recover overfished stocks, and secure livelihoods of coastal communities. As with any other management interventions, we need to better understand their effectiveness and impacts on coastal communities and the environment. To date, their evaluation largely relies on analyzing ecological data, often ignoring socioeconomic and governance dimensions. Existing data are analyzed in different ways, hindering the ability to compare results across case studies. Moreover, analysis and evaluation of reserves is generally conducted by academic scientists, not the reserves managers and users, thereby hindering effective local management and rapid response to change. We present a framework and tool to evaluate the effectiveness of marine reserves by matching seven commonly stated management objectives to nine biological, five socioeconomic, and 15 governance indicators. We provide guidelines on how to properly collect data that can then be analyzed with standardized method. Biological indicators are evaluated with causal inference techniques, using a counterfactual approach, to assess the effect of the reserve on each indicator. Linear regression models are fitted to socioeconomic indicators through time to test for differences before and after reserve implementation. Governance indicators are qualitatively analyzed using a framework developed through a literature review, which identifies common governance structures and their associated effectiveness. To make the framework accessible to fishers and decision makers, and allow replication of results, we developed the open source, web-based Marine Reserve Evaluation App (MAREA). Together, this new framework and MAREA can further our understanding and support management of marine reserves. 
+Marine reserves are often implemented to preserve habitat, recover overfished stocks, and secure livelihoods of coastal communities. As with any other management interventions, we need to better understand their effectiveness and impacts on coastal communities and the environment. To date, their evaluation largely relies on analyzing ecological data, often ignoring socioeconomic and governance dimensions. Existing data are analyzed in different ways, hindering the ability to compare results across case studies. Moreover, analysis and evaluation of reserves is generally conducted by academic scientists, not the reserve managers and users, thereby hindering effective local management and rapid response to change. We present a framework and tool to evaluate the effectiveness of marine reserves by matching seven commonly stated management objectives to nine biological, five socioeconomic, and 15 governance indicators. We provide guidelines on how to properly collect data that can then be analyzed with standardized methods. Biological indicators are evaluated with causal inference techniques, using a counterfactual approach, to assess the effect of the reserve on each indicator. Linear regression models are fitted to socioeconomic indicators through time to test for differences before and after reserve implementation. Governance indicators are qualitatively analyzed using a framework developed through a literature review, which identifies common governance structures and their associated effectiveness. To make the framework accessible to fishers and decision makers, and allow replication of results, we developed the open source, web-based Marine Reserve Evaluation Application (MAREA). Together, this new framework and MAREA can further our understanding and support management of marine reserves. 
 
 ```{r load packages}
 suppressPackageStartupMessages({
@@ -73,15 +73,15 @@ suppressPackageStartupMessages({
 
 Overfishing and unsustainable fishing practices are two of the largest threats to the conservation of marine ecosystems around the world [@pauly_2005-qV; @halpern_2008-dK]. Marine Protected Areas (MPAs) are frequently proposed as fishery management and conservation tools to help fish and invertebrate stocks recover [@lester_2008-F_; @lester_2009-Ks: @sala_2016-PV; @hastings_2017-sm] by limiting or restricting fishing effort and gears. No-take marine reserves (marine reserves hereinafter) are a particular type of MPA, where all fishing effort and extractive activities are off-limits [-@iucn_website_2017-Bg; @hortaecosta_2016-_3].
 
-Empirical studies have shown that MPAs increase biomass [@aburtooropeza_2011-ya; @lester_2009-Ks], enhance resilience to climatic impacts [@micheli_2012-EU; @roberts_2017-J9], and preserve genetic diversity [@munguavega_2015-yg]. Compared to partially protected MPAs, marine reserves are known to have even higher levels of biomass, density, richness, and larger organisms [@lester_2008-F_; @edgar_2014-UO; @giakoumi_2017-V2]. These effects are often measured as biological changes in the area through time and lack a control site against which to compare [@betti_2017-lq]. This before--after comparison cannot account for other factors for which one must control [@davies_2017-ml] in order to attribute biological change to protection in the reserves. While some studies have used control sites, these analyses do not estimate the net effect of the reserve, and often use a control-impact comparison approach that does not address temporal variability [@guidetti_2014-8Z; @friedlander_2017-oI; @lester_2009-Ks; @aburtooropeza_2011-ya; @rodriguez_2017-PD]. A smaller fraction of studies have used a before-after-control-impact (*i.e.* BACI) design comparing reserves to control sites before and after implementation [@moland_2013-VP; @soykan_2015-nu; @lester_2009-Ks], which allows the use of causal inference techniques that estimate the effect of the reserve.
+Empirical studies have shown that MPAs increase biomass [@aburtooropeza_2011-ya; @lester_2009-Ks], enhance resilience to climatic impacts [@micheli_2012-EU; @roberts_2017-J9], and preserve genetic diversity [@munguavega_2015-yg]. Compared to partially protected MPAs, marine reserves have higher levels of biomass, density, richness, and larger organisms [@lester_2008-F_; @edgar_2014-UO; @giakoumi_2017-V2]. These effects are often measured as biological changes in the area through time and lack a control site for comparison [@betti_2017-lq]. This approach does not account for other factors for which one must control [@davies_2017-ml] in order to attribute biological change to protection in the reserves. While some studies have used control sites, these analyses do not estimate the effect of the reserve, and often use a control-impact comparison approach that does not address temporal variability [@guidetti_2014-8Z; @friedlander_2017-oI; @lester_2009-Ks; @aburtooropeza_2011-ya; @rodriguez_2017-PD]. A smaller fraction of studies have used a before-after-control-impact (*i.e.* BACI) design comparing reserves to control sites before and after implementation [@moland_2013-VP; @soykan_2015-nu; @lester_2009-Ks], which allows the use of causal inference techniques that estimate the effect of the reserve.
 
 As with any other policy intervention, it is important that we can measure its effect in order to adapt and learn [@ferraro_2006-oW; @burgess_2016-HN]. The diversity of approaches currently used to evaluate the effect of marine reserves often does not answer the simple question: *What is the effect of a marine reserve on a given attribute?* This gap highlights the need to develop standardized approaches that enable us to evaluate the net effect of the intervention (*i.e.* causes of conservation outcomes; @ferraro_2006-oW). Furthermore, while biological aspects are important to reserve success, effectiveness also depends on the socioeconomic status and governance system of the local fishing communities [@basurto_2013-oq; @basurto_2012-Mz], which are often ignored. By excluding these important dimensions, the evaluation provides only a partial picture of the impacts of the reserve.
 
 Currently, only the IUCN framework "How to evaluate your MPA" [@pomeroy_2005-Py; @pomeroy_2004-23] provides a comprehensive list of biological, socioeconomic, and governance indicators, and insights into how these indicators may be measured, but does not provide guidelines on how to analyze them. Recent work by @mascia_2017-m_ integrates these three dimensions and suggests the use of causal inference techniques to provide a measure of the effect of implementing an MPA. However, these two novel approaches do not provide a user-friendly tool that enables replicability and scalability of the analysis, particularly when used by the fishers and decision makers themselves.
 
-An increasingly popular way to make science accessible, reproducible, scalable, and replicable is through Open Science and the development of open-access tools [@lowndes_2017-xh]. The Ocean Health Index [@halpern_2012-k9; @halpern_2017-Zi], for example, has successfully standardized a way to measure the health and benefits of the oceans. This approach has been implemented at global scales, but also at country-level [@selig_2015-F9], and regional scales [@halpern_2014-lQ; @elfes_2014-RC]. Open access tools are not limited to conservation, and have also been developed to evaluate fishery performance [@anderson_2015-ND; @dowling_2016-pO], design territorial use rights for fisheries (TURFs; @oyanedel_2017-TO), and improve decision making in the hydro power industry [@vilela_2017-Zo], just to list a few.
+An increasingly popular way to make science accessible, reproducible, scalable, and replicable is through Open Science and the development of open-access tools [@lowndes_2017-xh]. The Ocean Health Index [@halpern_2012-k9; @halpern_2017-Zi], for example, has successfully standardized a way to measure the health and benefits of the oceans. This approach has been implemented at global scales, but also at country-level [@selig_2015-F9], and regional scales [@halpern_2014-lQ; @elfes_2014-RC]. Open access tools are not limited to conservation, and have also been developed to evaluate fishery performance [@anderson_2015-ND; @dowling_2016-pO], design territorial use rights for fisheries (TURFs; @oyanedel_2017-TO), and improve decision making in the hydro power industry [@vilela_2017-Zo].
 
-The lack of a comprehensive framework and user-friendly tools to evaluate the effectiveness of marine reserves ---or the complexity of existing ones, which alienate non--experts--- calls for the development of a new framework and tool. The current work presents a framework to evaluate marine reserves, which incorporates the biological, socioeconomic, and governance dimensions of these areas. We first provide a list of commonly stated management objectives and match them to appropriate indicators. We then include a simple approach to analyzing these indicators building on causal inference techniques [@moland_2013-VP], which help us understand the effect of management interventions [@burgess_2016-HN; @mascia_2017-m_]. We also introduce the Marine Reserve Evaluation App (MAREA), an open source, web--based tool that automates the framework described in this paper and enables its broader use. Finally, we present a case study on the evaluation of a marine reserve established by the fishers of Isla Natividad (Mexico) in 2006, to demonstrate the potential of MAREA.
+The lack of a comprehensive framework and user-friendly tools to evaluate the effectiveness of marine reserves ---or the complexity of existing ones, which alienate non--experts--- calls for the development of a new framework and tool. The current work presents a framework to evaluate marine reserves, which incorporates the biological, socioeconomic, and governance dimensions of these areas. We first provide a list of commonly stated management objectives and match them to appropriate indicators. We then include a simple approach to analyzing these indicators building on causal inference techniques [@moland_2013-VP], which help us understand the effect of management interventions [@burgess_2016-HN; @mascia_2017-m_]. We also introduce the Marine Reserve Evaluation Application (MAREA), an open source, web--based tool that automates the framework described in this paper and enables its broader use. Finally, we present a case study on the evaluation of a marine reserve established by the fishers of Isla Natividad (Mexico) in 2006, to demonstrate the potential of MAREA.
 
 # Materials and methods
 
@@ -107,7 +107,7 @@ Throughout this study, we will refer to the stated goals for which a marine rese
 
 Based on these seven objectives, we determined a set of associated indicators to evaluate reserve effectiveness. The list of indicators was compiled through a review of scientific literature in which we identified indicators that were used to measure similar objectives. A first filter eliminated indicators for which baseline data do not typically exist in Mexico. The preliminary list of indicators was reviewed at a workshop with participation of members from Mexican fishery management agencies and non-government organizations. Later, these were presented to fishers from the Ensenada Fishing Cooperative (*S.C.P.P. Ensenada*), in Baja California, who provided input. Our final list of indicators includes those identified in review works such as @lester_2009-Ks or @woodcock_2017-Wm.
 
-Indicators are divided into three main categories: biological, socioeconomic, and governance (Table 1). Biological indicators (n = 9) focus on fish and invertebrate communities that are evaluated using underwater ecological surveys performed inside and outside the reserve (see Data and Analysis section for specific sampling design and methodologies). Socioeconomic indicators (n = 5) reflect the performance of the fishery in terms of landings, income from landings, and availability of alternative livelihoods. Governance indicators (n = 15) describe the governance structures under which the community operates (*e.g.*, access rights to the fishery, number of fishers, legal recognition of the reserve). Indicators may be numeric (e.g. Fish biomass) or descriptive (*e.g.* Reasoning for reserve location). Our list includes indicators that respond to the implementation of the reserve (*i.e.* outcome variables) or that might further the understanding of its performance. In that sense, most biological and socioeconomic indicators are outcome variables. On the other hand, governance indicators are viewed as possible explanatory variables of reserve performance. Whenever an indicator is applied to “Target species”, it means that the indicator can be used for all species (*e.g.* Fish Biomass) and/or for individual species that are either the conservation target of the reserve or are of particular economic or ecological interest (*e.g.* Grouper Biomass). Table 1 presents the proposed indicators, and Table 2 shows how objectives are matched with biological and socioeconomic indicators; all governance indicators should always be used.
+Indicators are divided into three main categories: biological, socioeconomic, and governance (Table 1). Biological indicators (n = 9) focus on fish and invertebrate communities that are evaluated using underwater ecological surveys performed inside and outside the reserve (see Data and Analysis section for specific sampling design and methodologies). Socioeconomic indicators (n = 5) reflect the performance of the fishery in terms of landings, income from landings, and availability of alternative livelihoods. Governance indicators (n = 15) describe the governance structures under which the community operates (*e.g.*, access rights to the fishery, number of fishers, legal recognition of the reserve). Indicators may be numeric (e.g. Fish biomass) or descriptive (*e.g.* Reasoning for reserve location). Our list includes indicators that respond to the implementation of the reserve (*i.e.* outcome variables) or indicators that might further the understanding the reserve's performance. In that sense, most biological and socioeconomic indicators are outcome variables. On the other hand, governance indicators are viewed as possible explanatory variables of reserve performance. Whenever an indicator is applied to “Target species”, it means that the indicator can be used for all species (*e.g.* Fish Biomass) and/or for individual species that are either the conservation target of the reserve or are of particular economic or ecological interest (*e.g.* Grouper Biomass). Table 1 presents the proposed indicators, and Table 2 shows how objectives are matched with biological and socioeconomic indicators; all governance indicators should always be used.
 
 \clearpage
 
@@ -145,7 +145,7 @@ Having a BACI sampling design for biological data allows us to use causal infere
 
 In this model, $i$, $t$, and $z$ are subindices for transect, time, and zone (control or reserve site), respectively. This model allows us to estimate the change in an indicator ($I$) based on the year ($Y$), a dummy variable that indicates treatment ($Z$; *i.e.* control or reserve), an interaction between a dummy variable that indicates pre-- or post--implementation ($P$) and treatment ($Z$), and covariates such as bottom temperature ($T$; in °C), horizontal visibility during the survey ($V$; in m), and depth at which survey was performed ($D$; in m). $\epsilon$ represents the error term associated to the regression. Here, years are modeled as factors, using the first year as the reference level. This does not impose a linear structure in the way an indicator changes through time (*i.e.* the change in biomass between 2006 and 2007 does not have to be the same as the change between 2015 and 2016). The treatment and implementation variables, modeled as dummy variables, are coded as Control = 0 and Reserve = 1; and Pre--implementation = 0 and Post--implementation = 1, respectively.
 
-Socioeconomic data are often collected by fishers, fishery management agencies or CSOs by recording landings, income, and sometimes prices for each species. To control for inflation, income is adjusted with the country’s consumer price index [@oecd_website_2017-VV]:
+Socioeconomic data are often collected by fishers, natural resource management agencies, or CSOs by recording landings, income, and sometimes prices for each species. To control for inflation, income is adjusted with the country’s consumer price index [@oecd_website_2017-VV]:
 
 \begin{equation}I_t = RI\times \frac{CPI_t}{CPI_T}\end{equation}
 
@@ -172,7 +172,7 @@ fig2 <- knitr::include_graphics("./Figures/legend2.gif")
 ```
 
 
-The second output from MAREA is a technical report intended to communicate information and statistical results in a more comprehensive and technical way. This report also includes a scorecard as a summary of the results, but provides more information for each indicator. For all numeric indicators, the report includes a graph of the value of the indicatorin the reserve and control sites, through time. It also provides a regression table that summarizes the value of all coefficients in the regression and their respective robust standard errors. The summary table also provides information on model fit ($R^2$) and significance of the regression.
+The second output from MAREA is a technical report intended to communicate information and statistical results in a more comprehensive and technical way. This report also includes a scorecard as a summary of the results, but provides more information for each indicator. For all numeric indicators, the report includes a graph of the value of the indicator in the reserve and control sites, through time. It also provides a regression table that summarizes the value of all coefficients in the regression and their respective robust standard errors. The summary table also provides information on model fit ($R^2$) and significance of the regression.
 
 The scorecard is produced with functions from the Shinydashboard package [@shinydashboard_2017]. The technical report is produced by a parameterized Rmarkdown document [@rmarkdown_2017] processed by the knitr package [@knitr_2017]. Another feature of MAREA is that the user can choose to share the data. Once the technical report is downloaded, the information on the reserve, its management objectives, and all uploaded data are saved into a central repository. These data can be accessed at any time by any person interested in acquiring them at [github.com/turfeffect/MAREAdata](github.com/turfeffect/MAREAdata).
 
@@ -306,9 +306,9 @@ landings_summary <- landings %>%
   mutate(Valor = Valor/sum(Valor)*100)
 ```
 
-Local fishers ---trained in scientific diving by the NGO Comunidad y Biodiversidad, A.C. (COBI; [www.cobi.org](www.cobi.org))--- and personnel from COBI performed SCUBA dives to record fish and invertebrate richness and abundances, as well as fish total length. Information was recorded along 30 m transects, with a sampling window of 2 m X 2 m following a standardized ReefCheck protocol [@suman_2010-ez]. Ecological surveys are performed yearly in each reserve and corresponding control site(s), before and after the implementation of the reserve, allowing us to have a BACI sampling design. Yearly surveys (2006 -– 2016) were carried out in late July -- early August, performing a total of `r sum(fish_summary$Reserva)` and `r sum(invert_summary$Reserva)` transects in the reserve site for fish and invertebrate surveys, respectively. Similar sampling effort was applied to the control site, with `r sum(fish_summary$Control)` fish and `r sum(invert_summary$Control)` invertebrate transects. Between 12 and 27 transects were performed in each site every year.
+Local fishers ---trained in scientific diving by the NGO Comunidad y Biodiversidad, A.C. (COBI; [www.cobi.org](www.cobi.org), ReefCheck California, and Stanford University )--- and personnel from these institutions performed SCUBA dives to record fish and invertebrate richness and abundances, as well as fish total length. Information was recorded along 30 m transects, with a sampling window of 2 m X 2 m following a standardized ReefCheck protocol [@suman_2010-ez]. Ecological surveys are performed yearly in each reserve and corresponding control site(s), before and after the implementation of the reserve, allowing us to have a BACI sampling design. Yearly surveys (2006 -– 2016) were carried out in late July -- early August, performing a total of `r sum(fish_summary$Reserva)` and `r sum(invert_summary$Reserva)` transects in the reserve site for fish and invertebrate surveys, respectively. Similar sampling effort was applied to the control site, with `r sum(fish_summary$Control)` fish and `r sum(invert_summary$Control)` invertebrate transects. Between 12 and 27 transects were performed in each site every year.
 
-Socioeconomic data was obtained from the National Commission for Fisheries and Aquaculture (Comisión Nacional de Pesca y Acuacultura; CONAPESCA). The data contains species-level (n = `r length(unique(landings$GeneroEspecie))+2` spp.) information on monthly landings and income from 2000 to 2014. Data on landings and income was aggregated by year, and the yearly Consumer Price Index [@oecd_website_2017-VV] was included. From the nine species available, we selected as objective species those that contributed the most (88.27%) income from 2000 to 2014: lobster (*Panulirus interruptus*; 71.76%), red sea urchin (*Mesocentrotus franciscanus*; 9.33%), snail (*Megastraea undosa*; 3.93%), and sea cucumber (*Parastichopus parvimensis*; 3.23%). Abalone species (*Haliotis fulgens*; 4.52% and *Haliotis corrugata*; 6.16%) were excluded because the cooperative has implemented an informal closure of these fisheries to allow its populations to recover since 2010. Eliminating all fishing pressure on abalones means that the control site receives (for this species) the same treatment as the reserve.
+Socioeconomic data was obtained from the National Commission for Aquaculture and Fisheries (Comisión Nacional de Acuacultura y Pesca; CONAPESCA). The data contains species-level (n = `r length(unique(landings$GeneroEspecie))+2` spp.) information on monthly landings and income from 2000 to 2014. Data on landings and income was aggregated by year, and the yearly Consumer Price Index [@oecd_website_2017-VV] was included. From the nine species available, we selected as objective species those that contributed the most (88.27%) income from 2000 to 2014: lobster (*Panulirus interruptus*; 71.76%), red sea urchin (*Mesocentrotus franciscanus*; 9.33%), snail (*Megastraea undosa*; 3.93%), and sea cucumber (*Parastichopus parvimensis*; 3.23%). Abalone species (*Haliotis fulgens*; 4.52% and *Haliotis corrugata*; 6.16%) were excluded because the cooperative has implemented an informal closure of these fisheries to allow its populations to recover since 2010. Eliminating all fishing pressure on abalones means that the control site receives (for this species) the same treatment as the reserve.
 
 For governance data, we constructed the database based on our knowledge of the area and the community.
 
@@ -606,7 +606,7 @@ socio_results_summary %>%
                notation = "symbol")
 ```
 
-In terms of governance, the community is strongly organized, which is likely a driver of their success. The first point of success is the existence of a fishing cooperative that is also affiliated to a regional fishing cooperatives federation. These polycentric governance structures allow various levels of organization that foster communication and cooperation [@mccay_2014-CN]; federations also provide bargain power with governments [@espinosaromero_2014-PY; @finkbeiner_2015-87]. Access to fishing resources is managed through a TURF, permits, and fishing quotas (for some species). Their TURF promotes a sense of stewardship of their resources and incentivizes sustainable management [@mccay_2017-1m; @finkbeiner_2015-87]. Together, these structures enabled a participative, bottom--up process during the reserve design phase; opinions of all fishing members ---and often non-fishers, but community members--- were included. Participation of community members in reserve surveillance and yearly monitoring indicate commitment and interest, and allow informal communication of results to un-involved community members. Furthermore, the reserve is partially isolated from poaching activity and fishers have internal regulations pertaining the reserves. The low level of illegal fishing by members of the community and outsiders both inside and outside the reserve represents another indication of effectiveness. Governance indicators are summarized in Table 5.
+In terms of governance, the community is strongly organized, which is likely a driver of their success [@gutirrez_2011-0U]. The first point of success is the existence of a fishing cooperative that is also affiliated to a regional fishing cooperatives federation. These polycentric governance structures allow various levels of organization that foster communication and cooperation [@mccay_2014-CN]; federations also provide bargain power with governments [@espinosaromero_2014-PY; @finkbeiner_2015-87]. Access to fishing resources is managed through a TURF, permits, and fishing quotas (for some species). Their TURF promotes a sense of stewardship of their resources and incentivizes sustainable management [@mccay_2017-1m; @finkbeiner_2015-87]. Together, these structures enabled a participative, bottom--up process during the reserve design phase; opinions of all fishing members ---and often non--fishers, but community members--- were included. Participation of community members in reserve surveillance and yearly monitoring indicate commitment and interest, and allow informal communication of results to un-involved community members. Furthermore, the reserve is partially isolated from poaching activity and fishers have internal regulations pertaining to the reserves. The low level of illegal fishing by members of the community and outsiders both inside and outside the reserve represents another indication of effectiveness. Governance indicators are summarized in Table 5.
 
 ```{r}
 read.csv("Tables/Governance_data.csv", col.names = c("Indicator", "Description"), stringsAsFactors = F) %>% 
@@ -635,9 +635,9 @@ It is important that evidence--based management and conservation outcomes are co
 
 We recognize that the 29 indicators used by MAREA might not fully describe a reserve. However, they provide a starting point to perform the evaluation, to which managers and users can add other indicators (*e.g.* larval dispersal or connectivity) that are relevant to their reserve. Furthermore, MAREA's value is that it provides a free, simple, and replicable way to perform rigorous impact analysis. The tool can easily be used by fishers, CSO members, and managers in government agencies, providing transparency of the analysis and results. In addition, it can empower and enable local managers and fishers to respond to local change and adapt by allowing direct and easy access to the information.
 
-The effectiveness of marine reserves continues to be a matter of debate [@woodcock_2017-Wm; @edgar_2014-UO]. With current targets set to increase ocean protection, it is important that we understand the effects of our interventions [@burgess_2016-HN] so we can better inform management [@ferraro_2006-oW]. It is therefore important that academics, managers, fishers, and CSOs have access to open access tools like MAREA. This is particularly relevant for Mexico and other Latin American countries, where management agencies are often shorthanded and underfunded [@lundquist_2005-OL]. In this context, MAREA provides a simple and replicable way to align management objectives with performance indicators. The proposed methodologies, specially the way in which biological indicators are evaluated, provide valuable information for managers. We acknowledge there is room for improvement in the way in which socioeconomic and governance data are analyzed. Despite this, providing a unifying platform where all indicators can be analyzed and comprehensively presented represents a valuable step towards evidence--based effective management[@ferraro_2006-oW].
+The effectiveness of marine reserves continues to be a matter of debate [@woodcock_2017-Wm; @edgar_2014-UO]. With current targets set to increase ocean protection, it is important that we understand the effects of our interventions [@burgess_2016-HN] so we can better inform management [@ferraro_2006-oW]. It is therefore important that academics, managers, fishers, and CSOs have access to open access tools like MAREA. This is particularly relevant for Mexico and other Latin American countries, where management agencies are often shorthanded and underfunded [@lundquist_2005-OL]. In this context, MAREA provides a simple and replicable way to align management objectives with performance indicators. The proposed methodologies, especially the way in which biological indicators are evaluated, provide valuable information for managers. We acknowledge there is room for improvement in the way in which socioeconomic and governance data are analyzed. Despite this, providing a unifying platform where all indicators can be analyzed and comprehensively presented represents a valuable step towards effective evidence--based management [@ferraro_2006-oW].
 
-While the first release of MAREA is now available, it will continue to be developed and maintained to keep up to date with literature. This process will incorporate new features, and enhance current ones, aiming to improve user experience and expand the scope of the analysis. Yet, we believe that this first release represents a major step towards effective evaluation and management of marine reserves.
+The first release of MAREA is now available, and it will continue to be developed and maintained to keep up to date with literature. This process will incorporate new features, and enhance current ones, aiming to improve user experience and expand the scope of the analysis. Yet, we believe that this first release represents a major step towards effective evaluation and management of marine reserves.
 
 # Acknowledgements
 
@@ -650,8 +650,8 @@ Funding must not be included in the manuscript. There is a special section in th
 - CF and JCVD received support from the Latin American Fisheries Fellowship Program.
 - JCVD received support from the Consejo Nacional de Ciencia y Tecnología (CONACyT).
 - GM received financial support from Waitt Foundation.
-- Biological data for Isla Natividad were collected with the support of the Walton Family Foundation and the NSF-CNH program (grant DEB-1212124).
-- The Nature Conservancy and World Wildlife Fund--Carlos Slim Foundation Alliance.
+- Biological data for Isla Natividad were collected with the support of the Walton Family Foundation, the NSF-CNH program (grant DEB-1212124), Marisla Foundation, Sandler Family Supporting Foundation, and Packard Foundation.
+- AS received support from The Nature Conservancy and World Wildlife Fund--Carlos Slim Foundation Alliance
 
 
 \clearpage
