--- a/Manuscript.Rmd
+++ b/Manuscript.Rmd
@@ -47,7 +47,7 @@ Email: jvillasenor@bren.ucsb.edu (JCVD) \
 
 **Abstract**
 
-Marine reserves are often implemented to preserve habitat, recover overfished stocks, and secure livelihoods of coastal communities. As with any other management interventions, we need to better understand their effectiveness and impacts on coastal communities and the environment. To date, their evaluation largely relies on analyzing ecological data, often ignoring socioeconomic and governance dimensions. Existing data are analyzed in different ways, hindering the ability to compare results across case studies. Moreover, analysis and evaluation of reserves is generally conducted by academic scientists, not the reserve managers and users, thereby hindering effective local management and rapid response to change. We present a framework and tool to evaluate the effectiveness of marine reserves by matching seven commonly stated management objectives to nine biological, five socioeconomic, and 15 governance indicators. We provide guidelines on how to properly collect data that can then be analyzed with standardized methods. Biological indicators are evaluated with causal inference techniques, using a counterfactual approach, to assess the effect of the reserve on each indicator. Linear regression models are fitted to socioeconomic indicators through time to test for differences before and after reserve implementation. Governance indicators are qualitatively analyzed using a framework developed through a literature review, which identifies common governance structures and their associated effectiveness. To make the framework accessible to fishers and decision makers, and allow replication of results, we developed the open source, web-based Marine Reserve Evaluation Application (MAREA). Together, this new framework and MAREA can further our understanding and support management of marine reserves. 
+Marine reserves are implemented to achieve a variety of objectives, but are seldom rigorously evaluated to determine whether those objectives are met. In the rare cases when evaluations do take place, they typically focus on ecological indicators and ignore other relevant objectives such as socioeconomics and governance. And regardless of the objectives, the diversity of locations, monitoring protocols, and analysis approaches hinder the ability to compare results across case studies. Moreover, analysis and evaluation of reserves is generally conducted by outside researchers, not the reserve managers or users, plausibly thereby hindering effective local management and rapid response to change. We present a framework and tool, called “MAREA”,to overcome these challenges. Its purpose is to evaluate the extent to which any given reserve has achieved its stated objectives.  MAREA provides specific guidance on data collection and formatting, and then conducts rigorous causal inference analysis based on data input by the user, providing real-time outputs about the effectiveness of the reserve. MAREA’s ease of use, standardization of state-of-the-art inference methods, and ability to analyze marine reserve effectiveness across ecological, socioeconomic, and governance objectives could dramatically further our understanding and support of effective marine reserve management.
 
 ```{r load packages}
 suppressPackageStartupMessages({
