--- a/Manuscript.Rmd
+++ b/Manuscript.Rmd
@@ -71,21 +71,21 @@ suppressPackageStartupMessages({
 
 # Introduction
 
-Overfishing and unsustainable fishing practices are two of the largest threats to the conservation of marine ecosystems around the world [@pauly_2005-qV; @halpern_2008-dK]. Marine Protected Areas (MPAs) are frequently proposed as fishery management and conservation tools to help fish and invertebrate stocks recover [@lester_2008-F_; @lester_2009-Ks: @sala_2016-PV; @hastings_2017-sm] by limiting or restricting fishing effort and gears. No-take marine reserves (marine reserves hereinafter) are a particular type of MPA, where all fishing effort and extractive activities are off-limits [-@iucn_website_2017-Bg; @hortaecosta_2016-_3].
+Unsustainable fishing practices threaten biodiversity, conservation, economic and social outcomes [@pauly_2005-qV; @halpern_2008-dK]. Marine Protected Areas (MPAs; and marine reserves, in which all extractive efforts are prohibited) are frequently proposed to aid in the recovery of fish and invertebrate stocks [@lester_2008-F_; @lester_2009-Ks; @sala_2016-PV; @hastings_2017-sm] by limiting or restricting fishing effort and gears.
 
-Empirical studies have shown that MPAs increase biomass [@aburtooropeza_2011-ya; @lester_2009-Ks], enhance resilience to climatic impacts [@micheli_2012-EU; @roberts_2017-J9], and preserve genetic diversity [@munguavega_2015-yg]. Compared to partially protected MPAs, marine reserves have higher levels of biomass, density, richness, and larger organisms [@lester_2008-F_; @edgar_2014-UO; @giakoumi_2017-V2]. These effects are often measured as biological changes in the area through time and lack a control site for comparison [@betti_2017-lq]. This approach does not account for other factors for which one must control [@davies_2017-ml] in order to attribute biological change to protection in the reserves. While some studies have used control sites, these analyses do not estimate the effect of the reserve, and often use a control-impact comparison approach that does not address temporal variability [@guidetti_2014-8Z; @friedlander_2017-oI; @lester_2009-Ks; @aburtooropeza_2011-ya; @rodriguez_2017-PD]. A smaller fraction of studies have used a before-after-control-impact (*i.e.* BACI) design comparing reserves to control sites before and after implementation [@moland_2013-VP; @soykan_2015-nu; @lester_2009-Ks], which allows the use of causal inference techniques that estimate the effect of the reserve.
+Available empirical evidence on marine reserve effectiveness is mixed [@padleton_2017-vn]. Some studies have shown that MPAs increase biomass [@aburtooropeza_2011-ya; @lester_2009-Ks], enhance resilience to climatic impacts [@micheli_2012-EU; @roberts_2017-J9], and preserve genetic diversity [@munguavega_2015-yg]. Compared to partially protected MPAs, marine reserves have higher levels of biomass, density, richness, and larger organisms [@lester_2008-F_; @edgar_2014-UO; @giakoumi_2017-V2; @sala_2017-69]. These effects are often measured as biological changes in the area through time and many lack a control site for comparison [@betti_2017-lq]. This approach does not account for other factors for which one must control [@davies_2017-ml] in order to causally attribute a biological change to the reserve. While some studies have used control sites, these analyses do not estimate the effect of the reserve, and often use a control-impact comparison approach that does not address temporal variability [@guidetti_2014-8Z; @friedlander_2017-oI; @lester_2009-Ks; @aburtooropeza_2011-ya; @rodriguez_2017-PD]. A smaller fraction of studies have used a before-after-control-impact (*i.e.* BACI) design comparing reserves to control sites before and after implementation [@moland_2013-VP; @soykan_2015-nu; @lester_2009-Ks], which allows the use of causal inference techniques that estimate the effect of the reserve.
 
-As with any other policy intervention, it is important that we can measure its effect in order to adapt and learn [@ferraro_2006-oW; @burgess_2016-HN]. The diversity of approaches currently used to evaluate the effect of marine reserves often does not answer the simple question: *What is the effect of a marine reserve on a given attribute?* This gap highlights the need to develop standardized approaches that enable us to evaluate the net effect of the intervention (*i.e.* causes of conservation outcomes; @ferraro_2006-oW). Furthermore, while biological aspects are important to reserve success, effectiveness also depends on the socioeconomic status and governance system of the local fishing communities [@basurto_2013-oq; @basurto_2012-Mz], which are often ignored. By excluding these important dimensions, the evaluation provides only a partial picture of the impacts of the reserve.
+But even when proper causal inference can be drawn, results are often idiosyncratic across reserves. Effects of reserves on ecological and economic outcomes are highly heterogeneous, and often depend on the specific ecological, economic, and social context. The purpose of this paper is to describe a user-friendly tool, called “MAREA”, to rigorously systematize the evaluation of marine reserve effectiveness. The tool is in the form of an open-source application that uses state-of-the-art methods from program evaluation to compare a reserve to control sites along a number of ecological, economic, and governance dimensions.
 
-Currently, only the IUCN framework "How to evaluate your MPA" [@pomeroy_2005-Py; @pomeroy_2004-23] provides a comprehensive list of biological, socioeconomic, and governance indicators, and insights into how these indicators may be measured, but does not provide guidelines on how to analyze them. Recent work by @mascia_2017-m_ integrates these three dimensions and suggests the use of causal inference techniques to provide a measure of the effect of implementing an MPA. However, these two novel approaches do not provide a user-friendly tool that enables replicability and scalability of the analysis, particularly when used by the fishers and decision makers themselves.
+The challenge of how to standardize marine reserve evaluation is not a new one. The recent IUCN framework “How is your MPA doing?” [@pomeroy_2005-Py; @pomeroy_2004-23] provides a comprehensive list of biological, socioeconomic, and governance indicators, and insights into how these indicators may be measured. But this framework stops short of analysis, so provides a user with little guidance about establishing causal inference about the reserve. Recent work by Mascia *et al.* [@mascia_2017-m_] integrates these three dimensions via the Social Ecological Systems Framework [@ostrom_2009-hg; @basurto_2013-oq] and suggests the use of causal inference techniques to provide a measure of the effect of conservation interventions. However, these two novel approaches do not provide a user-friendly tool that enables replicability and scalability of the analysis, particularly when used by the fishers and decision makers themselves.
 
-An increasingly popular way to make science accessible, reproducible, scalable, and replicable is through Open Science and the development of open-access tools [@lowndes_2017-xh]. The Ocean Health Index [@halpern_2012-k9; @halpern_2017-Zi], for example, has successfully standardized a way to measure the health and benefits of the oceans. This approach has been implemented at global scales, but also at country-level [@selig_2015-F9], and regional scales [@halpern_2014-lQ; @elfes_2014-RC]. Open access tools are not limited to conservation, and have also been developed to evaluate fishery performance [@anderson_2015-ND; @dowling_2016-pO], design territorial use rights for fisheries (TURFs; @oyanedel_2017-TO), and improve decision making in the hydro power industry [@vilela_2017-Zo].
+An increasingly popular way to make science accessible, reproducible, scalable, and replicable is through Open Science and the development of open-access tools [@lowndes_2017-xh]. The Ocean Health Index [@halpern_2012-k9; @halpern_2017-Zi], for example, successfully standardized a way to measure the health and benefits of the oceans. This approach has been implemented at a global scale, but also at country-level [@selig_2015-F9], and regionally [@halpern_2014-lQ; @elfes_2014-RC]. Open access tools are not limited to conservation, and have also been developed to evaluate fishery performance [@anderson_2015-ND; @dowling_2016-pO], design territorial use rights for fisheries [TURFs; @oyanedel_2017-TO], and improve decision making in the hydro power industry [@vilela_2017-Zo].
 
-The lack of a comprehensive framework and user-friendly tools to evaluate the effectiveness of marine reserves ---or the complexity of existing ones, which alienate non--experts--- calls for the development of a new framework and tool. The current work presents a framework to evaluate marine reserves, which incorporates the biological, socioeconomic, and governance dimensions of these areas. We first provide a list of commonly stated management objectives and match them to appropriate indicators. We then include a simple approach to analyzing these indicators building on causal inference techniques [@moland_2013-VP], which help us understand the effect of management interventions [@burgess_2016-HN; @mascia_2017-m_]. We also introduce the Marine Reserve Evaluation Application (MAREA), an open source, web--based tool that automates the framework described in this paper and enables its broader use. Finally, we present a case study on the evaluation of a marine reserve established by the fishers of Isla Natividad (Mexico) in 2006, to demonstrate the potential of MAREA.
+This paper presents a framework and user-friendly tool to evaluate marine reserve effectiveness, which incorporates the biological, socioeconomic, and governance dimensions of any fishery. We first provide a list of commonly stated management objectives and match them to appropriate indicators. We then develop a simple approach to analyzing these indicators building on causal inference techniques [@moland_2013-VP], which help us understand the effect of management interventions [@burgess_2016-HN; @mascia_2017-m_]. To implement the analytical approach in a user-friendly format, we introduce the Marine Reserve Evaluation Application (MAREA), an open source, web–based tool that automates the framework described in this paper and enables its broader use. Finally, we present a case study on the evaluation of a marine reserve established by the fishers of Isla Natividad (Mexico) in 2006, to demonstrate the potential of MAREA.
 
 # Materials and methods
 
-Here, we describe the proposed framework to evaluate the effectiveness of marine reserves (Fig. 1). We explain how management objectives were identified and matched to appropriate indicators that allow the evaluation of the reserves, and provide brief guidelines on data collection. Alongside, methodologies to analyze these indicators are presented. Then, we describe the development of MAREA and explain how this user-friendly open access tool can be used by anyone. Finally, we provide guidelines on how to interpret and use the results and output generated by MAREA to inform management.
+Here, we describe the proposed framework to evaluate the effectiveness of marine reserves (Fig. 1). We explain how management objectives were identified and matched to appropriate indicators that allow the evaluation of the reserves, and provide brief guidelines on data collection. Alongside, methodologies to analyze these indicators are presented. We then describe the development of MAREA and explain how this user-friendly open access tool can be used by fishermen, managers, and other stakeholders with little scientific background. Finally, we provide guidelines on how to interpret and use the results and output generated by MAREA to inform management.
 
 **Fig. 1. Workflow to evaluate the effectiveness of marine reserves.**
 
@@ -95,19 +95,19 @@ fig1 <- knitr::include_graphics("./Figures/flowchart.gif", dpi = 2380)
 
 ## Marine Reserve objectives and indicators
 
-Throughout this study, we will refer to the stated goals for which a marine reserve was designed as objectives. This work was motivated by the need to provide a framework to evaluate Mexican marine reserves. Thus, our focus was on identifying common objectives of marine reserves in Mexico. However, we group these objectives into seven major categories, which can be applied to marine reserves worldwide. The list of objectives was developed through a literature review, which compiled stated objectives in legislation [@nom049sagpesc_2014-V6; @lgeepa_2017-jL] and official documents such as the Technical Justification Studies (*Estudios Tecnicos Justificativos*), agreements, and decrees associated to these areas. Even though each reserve has its own goals, seven main categories of objectives were identified:
+Throughout this study, we will refer to the stated goals for which a marine reserve was designed as “objectives.” This work was motivated by the case of Mexico, where 39 reserves have been implemented over the past five years to achieve objectives such as increasing productivity in nearby waters or recover overexploited species; these reserves have never been formally evaluated for effectiveness at meeting those objectives. Thus, our focus was on identifying common objectives of marine reserves in Mexico. However, a literature review and discussions with marine reserve researchers worldwide suggest that the objectives driving Mexican marine reserve implementation are similar to those in the rest of the world. Thus, we group these objectives into seven major categories, which can be applied to marine reserves worldwide. The list of objectives includes stated objectives in legislation [@nom049sagpesc_2014-V6; @lgeepa_2017-jL] and official documents such as the Technical Justification Studies (*Estudios Técnicos Justificativos*), agreements, and decrees associated to these areas:
 
 1.	Avoid overexploitation
 2.	Conserve species under a special protection regime
 3.	Maintain biological processes (reproduction, recruitment, growth, feeding)
-4.	Improve fishery production in nearby waters
+4.	Improve fishery production in adjacent waters
 5.	Preserve biological diversity and the ecosystem
 6.	Recover overexploited species
 7.	Recover species of economic interest
 
-Based on these seven objectives, we determined a set of associated indicators to evaluate reserve effectiveness. The list of indicators was compiled through a review of scientific literature in which we identified indicators that were used to measure similar objectives. A first filter eliminated indicators for which baseline data do not typically exist in Mexico. The preliminary list of indicators was reviewed at a workshop with participation of members from Mexican fishery management agencies and non-government organizations. Later, these were presented to fishers from the Ensenada Fishing Cooperative (*S.C.P.P. Ensenada*), in Baja California, who provided input. Our final list of indicators includes those identified in review works such as @lester_2009-Ks or @woodcock_2017-Wm.
+Based on these seven objectives, we determined a set of associated indicators to evaluate reserve effectiveness. These indicators are specific variables on which data could be collected, and analyzed, to ultimately determine whether the corresponding objective was causally being achieved by the marine reserve. The list of indicators was compiled through a review of scientific literature in which we identified indicators that were used to measure similar objectives. A first filter eliminated indicators for which baseline data do not typically exist in Mexico. The preliminary list of indicators was reviewed at a workshop with participation of members from Mexican fishery management agencies and non-government organizations. Later, these were presented to fishers from the Ensenada Fishing Cooperative (*S.C.P.P. Ensenada*), in El Rosario, Baja California, who provided input. Our final list of indicators includes those identified in review works such as Lester *et al.* @lester_2009-Ks or Woodcock *et al.* @woodcock_2017-Wm.
 
-Indicators are divided into three main categories: biological, socioeconomic, and governance (Table 1). Biological indicators (n = 9) focus on fish and invertebrate communities that are evaluated using underwater ecological surveys performed inside and outside the reserve (see Data and Analysis section for specific sampling design and methodologies). Socioeconomic indicators (n = 5) reflect the performance of the fishery in terms of landings, income from landings, and availability of alternative livelihoods. Governance indicators (n = 15) describe the governance structures under which the community operates (*e.g.*, access rights to the fishery, number of fishers, legal recognition of the reserve). Indicators may be numeric (e.g. Fish biomass) or descriptive (*e.g.* Reasoning for reserve location). Our list includes indicators that respond to the implementation of the reserve (*i.e.* outcome variables) or indicators that might further the understanding the reserve's performance. In that sense, most biological and socioeconomic indicators are outcome variables. On the other hand, governance indicators are viewed as possible explanatory variables of reserve performance. Whenever an indicator is applied to “Target species”, it means that the indicator can be used for all species (*e.g.* Fish Biomass) and/or for individual species that are either the conservation target of the reserve or are of particular economic or ecological interest (*e.g.* Grouper Biomass). Table 1 presents the proposed indicators, and Table 2 shows how objectives are matched with biological and socioeconomic indicators; all governance indicators should always be used.
+Indicators are divided into three main categories: biological, socioeconomic, and governance (Table 1). The nine biological indicators focus on fish and invertebrate communities that are evaluated using underwater ecological surveys performed inside and outside the reserve (see Data and Analysis section for specific sampling design and methodologies). Five socioeconomic indicators reflect the performance of the fishery in terms of landings, income from landings, and availability of alternative livelihoods. Fifteen governance indicators describe the governance structures under which the community operates (*e.g.*, access rights to the fishery, number of fishers, legal recognition of the reserve). Some indicators require a numerical entry (*e.g.* Fish biomass) while others are more descriptive (*e.g.* Reasoning for reserve location). Many of the indicators specifically measure an outcome of the reserve, though some are designed to further the understanding of the mechanisms driving a reserve’s performance. In that sense, most biological and socioeconomic indicators are outcome variables. On the other hand, governance indicators are viewed as possible explanatory variables of reserve performance. Whenever an indicator is applied to “Target species”, it means that the indicator can be used for all species (*e.g.* Fish Biomass) and/or for individual species that are either the conservation target  of the reserve or are of particular economic or ecological interest (*e.g.* Grouper Biomass). Table 1 presents the proposed indicators, and Table 2 shows how objectives are matched with biological and socioeconomic indicators.
 
 \clearpage
 
@@ -120,7 +120,7 @@ read.csv("./Tables/Table_indicators.csv") %>%
   group_rows("Biological", 1, 7) %>%
   group_rows("Socioeconomic", 8, 10) %>% 
   group_rows("Governance", 11, 25) %>% 
-  add_footnote(c("The indicator is applied to target species"), notation = "symbol")
+  add_footnote(c("The indicator is also applied to target species"), notation = "symbol")
 ```
 
 \clearpage
@@ -128,7 +128,7 @@ read.csv("./Tables/Table_indicators.csv") %>%
 ```{r}
 read.csv("./Tables/Objectives_Indicators.csv") %>% 
   select(1:15) %>% 
-  knitr::kable(caption = "Management objectives and respective performance indicators.",
+  knitr::kable(caption = "Management objectives and respective performance indicators. All governance indicators should allways be used.",
                col.names = c("Objective", "B1", "B2", "B3", "B4", "B4*", "B5", "B6", "B7", "B7*", "S1", "S1*", "S2", "S2*", "S3")) %>% 
   kable_styling(latex_options = c("scale_down"))  %>% 
   column_spec(1, width = "4cm") %>% 
@@ -137,29 +137,29 @@ read.csv("./Tables/Objectives_Indicators.csv") %>%
 
 ## Data and analyses
 
-In many coastal marine reserves of Mexico, biological data are collected via underwater ecological surveys as part of a reserve's monitoring program, often carried out by local fishers with guidance from Civil Society Organizations (CSOs). Scientific divers record fish and invertebrate richness and abundances, as well as fish total length along belt transects. Ecological surveys are performed yearly in each reserve and corresponding control site(s), before and after the implementation of the reserve, allowing us to have a BACI sampling design. Control sites are areas where habitat is similar to that of the reserve, but with presence of fishing activity. While transect dimensions (*i.e.* length and width) and sampling methods might vary from study to study, the general idea remains the same: richness, abundances, and sizes of organisms are recorded in a study--specific standardized way. For this reason, MAREA does not assume specific transect dimensions, and pertinent indicators are calculated per transect (Table 1).
+In many coastal marine reserves of Mexico, biological data are collected via underwater visual censuses as part of a reserve’s monitoring program. Scientific divers (which are often local fishermen with guidance from Civil Society Organizations; CSOs) record fish and invertebrate richness and abundances, as well as fish total length along belt transects. Ecological surveys are typically performed annually in each reserve and corresponding control site(s), before and after the implementation of the reserve, providing a sampling design that can be used to draw causal inference. Control sites are areas where habitat is similar to that of the reserve, but with presence of fishing activity; in principle these are areas that are otherwise observationally identical to the reserve site, but where, for presumably random reasons, a reserve was not implemented. While transect dimensions (*i.e.* length and width) and sampling methods might vary from study to study, the general idea remains the same: richness, abundances, and sizes of organisms are recorded in a study–specific standardized way. For this reason, MAREA does not assume specific transect dimensions, and pertinent indicators are calculated per transect (Table 1).
 
-Having a BACI sampling design for biological data allows us to use causal inference techniques [@moland_2013-VP; @ferraro_2006-oW] to evaluate the effect of the reserve on biological indicators. The hypothesis that the indicators will respond to implementation of the reserve is tested by analyzing spatial and temporal changes in each numeric biological indicator (all but B5) using generalized linear models [@moland_2013-VP]. To account for variations in the environment and survey conditions, covariates that are gathered during the underwater ecological surveys are included into difference-in-differences a model with form:
+This sampling design for biological data allows us to use causal inference techniques [@moland_2013-VP; @ferraro_2006-oW] to evaluate the effect of the reserve on biological indicators. The hypothesis that the indicators will respond to implementation of the reserve is tested by analyzing spatial and temporal changes in each numeric biological indicator (all but B5) using generalized linear models [@moland_2013-VP]. To account for variations in the environment and survey conditions, covariates that are gathered during the underwater ecological surveys are included into difference-in-differences a model with form:
 
 \begin{equation}I_{i,t,z}=\beta_0 + \sum_{t = 2}^T\gamma_{i,t}Y_t + \beta_1Z_{i,z} + \beta_2P_{i,t,z}\times Z_{i,t,z} + \beta_3T_{i,t,z} + \beta_4V_{i,t,z} + \beta_5D_{i,t,z} + \epsilon_{i,t,z}\end{equation}
 
-In this model, $i$, $t$, and $z$ are subindices for transect, time, and zone (control or reserve site), respectively. This model allows us to estimate the change in an indicator ($I$) based on the year ($Y$), a dummy variable that indicates treatment ($Z$; *i.e.* control or reserve), an interaction between a dummy variable that indicates pre-- or post--implementation ($P$) and treatment ($Z$), and covariates such as bottom temperature ($T$; in °C), horizontal visibility during the survey ($V$; in m), and depth at which survey was performed ($D$; in m). $\epsilon$ represents the error term associated to the regression. Here, years are modeled as factors, using the first year as the reference level. This does not impose a linear structure in the way an indicator changes through time (*i.e.* the change in biomass between 2006 and 2007 does not have to be the same as the change between 2015 and 2016). The treatment and implementation variables, modeled as dummy variables, are coded as Control = 0 and Reserve = 1; and Pre--implementation = 0 and Post--implementation = 1, respectively.
+In this model, $i$, $t$, and $z$ are indices for transect, time, and zone (control or reserve site), respectively. This model allows us to estimate the change in an indicator ($I$) based on the year ($Y$), a dummy variable that indicates treatment ($Z$; *i.e.* control or reserve), an interaction between a dummy variable that indicates pre-- or post--implementation ($P$) and treatment ($Z$), and covariates such as bottom temperature ($T$; in °C), horizontal visibility during the survey ($V$; in m), and depth at which survey was performed ($D$; in m). $\epsilon$ represents the error term associated to the regression. Here, years are modeled as factors, using the first year as the reference level. This does not impose a linear structure in the way an indicator changes through time (*i.e.* the change in biomass between 2006 and 2007 does not have to be the same as the change between 2015 and 2016). The treatment and implementation variables, modeled as dummy variables, are coded as Control = 0 and Reserve = 1; and Pre--implementation = 0 and Post--implementation = 1, respectively.
 
 Socioeconomic data are often collected by fishers, natural resource management agencies, or CSOs by recording landings, income, and sometimes prices for each species. To control for inflation, income is adjusted with the country’s consumer price index [@oecd_website_2017-VV]:
 
 \begin{equation}I_t = RI\times \frac{CPI_t}{CPI_T}\end{equation}
 
-Where $I_t$ represents the adjusted income for year $t$ as the product between the reported income for that year and the ratio between the consumer price index ($CPI$) in that year to the most recent year’s ($T$) CPI. Since no control sites are typically available for this data type, numeric socioeconomic indicators (G1 and G2) are evaluated with a simplified version of eq. 1:
+Where $I_t$ represents the adjusted income for year $t$ as the product between the reported income for that year and the ratio between the consumer price index ($CPI$) in that year to the most recent year’s ($T$) CPI. Since no control sites are typically available for this data type, numeric socioeconomic indicators (S1 and S2) are evaluated with a simplified version of eq. 1:
 
 \begin{equation}I_{t}=\beta_0 + \beta_1P_{t} + \epsilon_{t}\end{equation}
 
-While this model does not allow establishing a causal relation, we can still measure changes in mean landings and income before and after the implementation of the reserve and provide valuable input. For both models (eq. 1 and eq. 3), coefficients are estimated via ordinary least squares, and heteroskedastic--robust standard errors are calculated.
+While this model does not formally allow for causal inference, we can still measure changes in mean landings and income before and after the implementation of the reserve and provide valuable input. For both models (eq. 1 and eq. 3), we estimate the model coeficients with ordinary least squares, and calculate heteroskedastic–robust standard errors.
 
-Governance data are not readily available nor systematically collected by the community or other organizations. Therefore, we created a survey specifically designed to collect information needed for the proposed indicators (B5, S3, and G1-G15). The survey is included as supplementary material in English (S1 Appendix) and Spanish (S2 Appendix). To analyze governance information, we developed a framework based on a literature review of common governance structures and their relation to effectiveness in managing fisheries or marine reserves (S3 Table). This approach has been proven to successfully evaluate governance structures [@espinosaromero_2014-PY]. Governance information is not quantitatively analyzed, but it is presented along with the biological and socioeconomic indicators to provide managers and users with a more complete description of the reserve.
+While biological and some economic data are regularly collected, governance data are typically not available nor systematically collected by the community or other organizations. Therefore, we created a survey specifically designed to collect information needed for the proposed indicators (B5, S3, and G1-G15). The survey is included as supplementary material in English (S1 Appendix) and Spanish (S2 Appendix). To analyze governance information, we developed a framework based on a literature review of common governance structures and their relation to effectiveness in managing fisheries or marine reserves (S3 Table). This approach has been proven to successfully evaluate governance structures [@espinosaromero_2014-PY]. Unlike with biological and socioeconomic objectives (see eqs 1 and 3), MAREA does not quantitatively analyze governance information. Rather, it is presented along with the biological and socioeconomic indicators to provide managers and users with a more complete description of the reserve.
 
 ## Marine Reserve Evaluation App (MAREA)
 
-MAREA was developed in R version 3.4.1 and R Studio [@rcore_2017] using the Shiny package [@shiny_2017], which provides the tools to build interactive web applications, hosted on an open server. MAREA can be accessed at [turfeffect.shinyapps.io/marea](turfeffect.shinyapps.io/marea/). While the original version was developed in Spanish because it was aimed for Mexico and other Latin-American countries, all of its content can be translated by a translation widget available within the app.
+We developed MAREAin R version 3.4.2 and R Studio 1.1.383 [@rcore_2017] using the Shiny package [@shiny_2017], to build an interactive web application hosted on an open server; the MAREA app can be accessed at [turfeffect.shinyapps.io/marea](turfeffect.shinyapps.io/marea/). While the original version was developed in Spanish because it was aimed for Mexico and other Latin-American countries, all of its content can be translated by a translation widget available within the app.
 
 MAREA is designed as a 6-step process, divided in tabs. The first tab introduces the app and summarizes the evaluation process. Then, the user selects management objectives, which MAREA automatically matches to appropriate indicators, based on Table 2. Users can also manually modify selected indicators based on their interests and data availability. The user can then load the data, using standard \*.csv text files; sample datasets are provided within MAREA. Once data have been loaded, MAREA identifies all reserves in the data (the uploaded dataset can contain data for more than one reserve), and lets the user select the reserve to be evaluated. At this point, the user can also specify the year of implementation of the reserve, reserve dimensions, and indicate target species that are of particular management interest. Before presenting the results, MAREA provides the user with a section to confirm that all the decisions made leading up to that point are correct. Finally, the user is taken to the results tab where they can be viewed in a simple format. The user can also download a more comprehensive technical report produced in \*.pdf format.
 
